--- a/h6/index.html
+++ b/h6/index.html
@@ -16,9 +16,9 @@
 
         // 2.
         let name = "Illya";
-        alert(`hello ${1}`); //hello 1
-        alert(`hello ${"name"}`); //hello name;
-        alert(`hello ${name}`); //hello Illya
+        alert(`hello ${1}`); 
+        alert(`hello ${"name"}`); 
+        alert(`hello ${name}`); 
 
         // 3.
         let a = prompt("введите число");
